agregamos selectores y etiquetas

--- a/semantic.html
+++ b/semantic.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <header>hola</header>
+    <header>
+        hola
+    </header>
 </body>
 </html>
